fix correct icons not showing for file types

--- a/public/styles/partials/no-empty-drive.css
+++ b/public/styles/partials/no-empty-drive.css
@@ -63,34 +63,37 @@ p.folder-data {
 
 .card-menu-options {
   position: absolute;
-  top: 36px;
-  right: 8px;
+  top: 29px;
+  right: 30px;
   background: var(--white-black);
   border: 1px solid #ddd;
   border-radius: 6px;
   min-width: 120px;
-  padding: 12px 16px;
   opacity: 0;
   transform: translateY(-8px);
   pointer-events: none;
-
+  z-index: 99999;
   transition:
     opacity 0.2s ease,
     transform 0.2s ease;
 }
 .card-menu-options.open {
-  opacity: 1;
+  opacity: 1 !important;
   transform: translateY(0);
   pointer-events: auto;
 }
 .card-menu-options a {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
-  background: none;
+  background-color: var(--white-black);
+  opacity: 1;
   text-align: left;
   cursor: pointer;
   font-size: 16px;
   text-decoration: none;
+  height: 2.2rem;
 }
 
 .card-menu-options a:visited {
